feat: Implement user and hotel registration with recent searched cities functionality; update models and routes

--- a/server/.env
+++ b/server/.env
@@ -6,3 +6,8 @@ MONGODB_URI=mongodb+srv://seecodes:seecodes123@cluster0.n66sjo3.mongodb.net
 CLERK_PUBLISHABLE_KEY=pk_test_Z2FtZS1ha2l0YS04MS5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_B3PtFAOiyATUUG6ojWXwneaU0jX791asG6Y69i0iaX
 CLERK_WEBHOOK_SECRET=whsec_Imu82nfGuNX4a2OhRth6r5Lb50k+0MBj
+
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=dyngfzpn8
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
