feat: Add booking functionality with availability check, booking creation, and user/hotel booking retrieval; implement room management and image upload

--- a/server/.env
+++ b/server/.env
@@ -9,5 +9,5 @@ CLERK_WEBHOOK_SECRET=whsec_Imu82nfGuNX4a2OhRth6r5Lb50k+0MBj
 
 # Cloudinary
 CLOUDINARY_CLOUD_NAME=dyngfzpn8
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
+CLOUDINARY_API_KEY=635188853485229
+CLOUDINARY_API_SECRET=5BwrDnlBfWkZOHnMAB-hEsOM5Yc
